--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinity MK</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&family=Sofia+Sans+Semi+Condensed:ital,wght@0,1..1000;1,1..1000&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/home.css">
 </head>
@@ -51,6 +54,13 @@
     </header>
     <main>
         <section class="section hero">
+            <!-- Look great. Feel amazing.
+Your local Putney destination for expert hair, nail, and beauty services. -->
+            <div>
+                <p>Look great.</p> 
+                <p>Feel Amazing.</p>
+            </div>
+
             <!-- <div>
                 <img src="assets/images/hero7.png" alt="hero image">
             </div> -->
