changed the size of the logo and hamburger

--- a/index.html
+++ b/index.html
@@ -23,20 +23,22 @@
         </div>
 
         <!-- Menu button -->
-        <button class="button-one" aria-controls="primary-navigation" aria-expanded="false"><span
-                class="sr-only">Menu</span>
-            <svg class="hamburger" viewBox="0 0 100 100" width="50" fill="var(--button-color)">
+        <button class="button-one" aria-controls="primary-navigation" aria-expanded="false">
+            <span class="sr-only">Menu</span>
+
+            <!-- Hamburger -->
+            <svg class="hamburger" viewBox="0 0 100 100" width="25" fill="var(--button-color)">
 
                 <!-- Top -->
-                <rect class="line top" width="80" height="8" x="10" y="25" rx="7">
+                <rect class="line top" width="80" height="10" x="10" y="20" rx="10">
                 </rect>
 
                 <!-- Middle -->
-                <rect class="line middle" width="80" height="8" x="10" y="45" rx="7">
+                <rect class="line middle" width="80" height="10" x="10" y="40" rx="10">
                 </rect>
 
                 <!-- Bottom -->
-                <rect class="line bottom" width="80" height="8" x="10" y="65" rx="7">
+                <rect class="line bottom" width="80" height="10" x="10" y="60" rx="10">
                 </rect>
 
             </svg>
