added images for small screens

--- a/index.html
+++ b/index.html
@@ -82,16 +82,18 @@
 
         <!-- Hero Section -->
         <section class="section hero">
+
             <!-- Look great. Feel amazing.
 Your local Putney destination for expert hair, nail, and beauty services. -->
+            <div>
+                <img src="assets/images/hero.jpg" srcset="assets/images/hero-small-screens.jpg, assets/images/hero.jpg 1000w" alt="hero image">
+            </div>
+
             <div>
                 <p>Look great.</p>
                 <p>Feel amazing.</p>
             </div>
 
-            <!-- <div>
-                <img src="assets/images/hero7.png" alt="hero image">
-            </div> -->
         </section>
 
         <!-- About section -->
