fixed links, about and footer

--- a/index.html
+++ b/index.html
@@ -53,11 +53,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/pages/about.html">
-                        About
-                    </a>
-                </li>
-                <li>
                     <a href="/pages/hair.html">
                         Hair
                     </a>
@@ -98,7 +93,13 @@ Your local Putney destination for expert hair, nail, and beauty services. -->
 
         <!-- About section -->
         <section class="section about">
-            About
+            <div>
+                <img src="assets/images/about-image2.png" alt="about section image">
+            </div>
+            <div>
+                <h2>About us</h2>
+                <p>Nestled just off Putney High Street, a short stroll from the station, Infinity MK is your go-to salon for hair, nail, and beauty needs. We're dedicated to understanding your unique style and providing exceptional service to help you look great and feel amazing.</p>
+            </div>
         </section>
 
 
@@ -106,10 +107,14 @@ Your local Putney destination for expert hair, nail, and beauty services. -->
 
     <!-- Footer -->
     <footer>
+        <div>
+            <img src="assets/images/logo7.png" alt="logo">
+        </div>
         <p>
             <span>Hair & Nails & Beauty Salon</span>
-            <span>195A Upper Richmond Road</span>
-            <span>Putney, London, SW15 6SG</span>
+            <span>195A Upper Richmond Rd</span>
+            <span>Putney, London</span>
+            <span>SW15 6SG</span>
         </p>
     </footer>
 
