--- a/pages/hair.html
+++ b/pages/hair.html
@@ -5,63 +5,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hair - Infinity MK</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Expletus+Sans:ital,wght@0,400..700;1,400..700&family=Sofia+Sans+Semi+Condensed:ital,wght@0,1..1000;1,1..1000&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 
 <body>
     <header>
-        <div>logo</div>
+
+        <!-- Logo -->
+        <div>
+            <img src="../assets/images/logo7.png" alt="infinity logo">
+        </div>
+
+        <!-- Menu button -->
+        <button class="button-one" aria-controls="primary-navigation" aria-expanded="false">
+            <span class="sr-only">Menu</span>
+
+            <!-- Hamburger -->
+            <svg class="hamburger" viewBox="0 0 100 100" width="25" fill="var(--button-color)">
+
+                <!-- Top -->
+                <rect class="line top" width="80" height="10" x="10" y="20" rx="10">
+                </rect>
+
+                <!-- Middle -->
+                <rect class="line middle" width="80" height="10" x="10" y="40" rx="10">
+                </rect>
+
+                <!-- Bottom -->
+                <rect class="line bottom" width="80" height="10" x="10" y="60" rx="10">
+                </rect>
+
+            </svg>
+        </button>
+
+        <!-- Navigation -->
         <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">
-                        <span class="active-link-text">
-                            Home
-                        </span>
-                        <span class="active-link-border"></span>
+            <ul id="primary-navigation" data-visible="false">
+                <li class="active">
+                    <a href="/index.html">
+                        Home
                     </a>
                 </li>
                 <li>
-                    <a href="about.html">
-                        <span class="active-link-text">
-                            About
-                        </span>
-                        <span class="active-link-border"></span>
+                    <a href="/pages/hair.html">
+                        Hair
                     </a>
                 </li>
                 <li>
-                    <a href="hair.html">
-                        <span class="active-link-text">
-                            Hair
-                        </span>
-                        <span class="active-link-border"></span>
+                    <a href="/pages/nails.html">
+                        Nails
                     </a>
                 </li>
                 <li>
-                    <a href="nails.html">
-                        <span class="active-link-text">
-                            Nails
-                        </span>
-                        <span class="active-link-border"></span>
-                    </a>
-                </li>
-                <li>
-                    <a href="beauty.html">
-                        <span class="active-link-text">
-                            Beauty
-                        </span>
-                        <span class="active-link-border"></span>
+                    <a href="/pages/beauty.html">
+                        Beauty
                     </a>
                 </li>
             </ul>
         </nav>
+
     </header>
     <main>
         <h2>Hair</h2>
         
     </main>
     <footer>
-        <p>Hair & Nails & Beauty Salon in Putney, 195A Upper Richmond Road, Putney, London, SW15 6SG</p>
+        <div>
+            <img src="../assets/images/logo7.png" alt="logo">
+        </div>
+        <p>
+            <span>Hair & Nails & Beauty Salon</span>
+            <span>195A Upper Richmond Rd</span>
+            <span>Putney, London</span>
+            <span>SW15 6SG</span>
+        </p>
     </footer>
     <script src="../assets/script/script.js"></script>
 </body>
