--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Your local Putney destination for expert hair, nail, and beauty services. -->
             </div>
 
             <div>
-                <p>Look great.</p>
+                <p>Look great,</p>
                 <p>Feel amazing.</p>
             </div>
 
@@ -94,7 +94,8 @@ Your local Putney destination for expert hair, nail, and beauty services. -->
         <!-- About section -->
         <section class="section about">
             <div>
-                <img src="assets/images/about-image2.png" alt="about section image">
+                <!-- <img src="assets/images/about-image2.png" alt="about section image"> -->
+                 <img src="assets/images/night_lights2.png" alt="about section image">
             </div>
             <div>
                 <h2>About us</h2>
