first-mobile-version

--- a/pages/hair.html
+++ b/pages/hair.html
@@ -91,9 +91,213 @@
 
                     <div class="accordion-content" id="panel1-content" aria-labelledby="panel1-heading"
                         aria-hidden="false" role="region">
-                        <p>
-                            <h3>Service</h3>
-                        </p>
+                        <div class="wrapper-service">
+                            <div class="service-accordion">
+                                <!-- Cut & Style -->
+                                <div class="service-accordion-panel">
+                                    <h2 id="service-panel1-heading">
+                                        <button class="service-accordion-trigger" aria-controls="service-panel1-content"
+                                            aria-expanded="true">
+                                            <span id="service-panel1-title">Cut & Style</span>
+                                        </button>
+                                    </h2>
+
+                                    <div class="service-accordion-content" id="service-panel1-content"
+                                        aria-labelledby="service-panel1-heading" aria-hidden="false" role="region">
+                                        <table>
+                                            <!-- <caption>Cut & Style Services and Prices</caption> -->
+                                            <thead>
+                                                <tr>
+                                                    <th>Service</th>
+                                                    <th>Price</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Ladies' Haircut</td>
+                                                    <td>£70</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Ladies' Restyle</td>
+                                                    <td>£75</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Gents Haircut</td>
+                                                    <td>£46</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Under 10 Years Old Girls</td>
+                                                    <td>From £15</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>11 to 16 Years Old Girls</td>
+                                                    <td>£35</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>11 to 16 Years Old Boys</td>
+                                                    <td>£28</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Blow Dry Short Hair</td>
+                                                    <td>£35</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Blow Dry Medium Hair</td>
+                                                    <td>£38</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Blow Dry Long Hair</td>
+                                                    <td>From £42</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Hair Up / Wedding Hair</td>
+                                                    <td>From £75</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <!-- Colouring -->
+                                <div class="service-accordion-panel">
+                                    <h2 id="service-panel2-heading">
+                                        <button class="service-accordion-trigger" aria-controls="service-panel2-content"
+                                            aria-expanded="false">
+                                            <span id="service-panel2-title">Colouring</span>
+                                        </button>
+                                    </h2>
+                                    <div class="service-accordion-content" id="service-panel2-content"
+                                        aria-labelledby="service-panel2-heading" aria-hidden="true" role="region">
+                                        <table>
+                                            <!-- <caption>Colouring</caption> -->
+                                            <thead>
+                                                <tr>
+                                                    <th>Service</th>
+                                                    <th>Price</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Full Head Of Highlights or Balayage</td>
+                                                    <td>£130</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>3/4 Head Of Highlights or Balayage</td>
+                                                    <td>£120</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>1/2 Head Of Highlights or Balayage</td>
+                                                    <td>£100</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Single Foils (t-sections)</td>
+                                                    <td>From £50</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Full Head Tint</td>
+                                                    <td>£70</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Re-growth Tint</td>
+                                                    <td>£55</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Glossing (Semi Permanent)</td>
+                                                    <td>£55</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Full Head Bleach (Toner included)</td>
+                                                    <td>£110</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Re-growth Bleach (Toner included)</td>
+                                                    <td>£90</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Men's Grey Blending</td>
+                                                    <td>£25</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Toner</td>
+                                                    <td>From £25</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <!-- Texturising & Straightening -->
+                                <div class="service-accordion-panel">
+                                    <h2 id="service-panel3-heading">
+                                        <button class="service-accordion-trigger" aria-controls="service-panel3-content"
+                                            aria-expanded="false">
+                                            <span id="service-panel3-title">Texturing & Straightening</span>
+                                        </button>
+                                    </h2>
+                                    <div class="service-accordion-content" id="service-panel3-content"
+                                        aria-labelledby="service-panel3-heading" aria-hidden="true" role="region">
+                                        <table>
+                                            <!-- <caption>Texturising & Straightening</caption> -->
+                                            <thead>
+                                                <tr>
+                                                    <th></th>
+                                                    <th>Short Hair</th>
+                                                    <th>Medium Hair</th>
+                                                    <th>Long Hair</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Perm</td>
+                                                    <td>£80</td>
+                                                    <td>£90</td>
+                                                    <td></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Brazilian Blow Dry/Keratin treatment</td>
+                                                    <td>£120</td>
+                                                    <td>£160</td>
+                                                    <td>£190</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <!-- Treatments -->
+                                <div class="service-accordion-panel">
+                                    <h2 id="service-panel4-heading">
+                                        <button class="service-accordion-trigger" aria-controls="service-panel4-content"
+                                            aria-expanded="false">
+                                            <span id="service-panel1-title">Treatments</span>
+                                        </button>
+                                    </h2>
+                                    <div class="service-accordion-content" id="service-panel4-content"
+                                        aria-labelledby="service-panel4-heading" aria-hidden="true" role="region">
+                                        <table>
+                                            <!-- <caption>Treatments</caption> -->
+                                            <thead>
+                                                <tr>
+                                                    <th>Service</th>
+                                                    <th>Price</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Fusio Dose (Kerastase)</td>
+                                                    <td>£20</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Power-Mix (L'Oreal)</td>
+                                                    <td>£15</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Olaplex</td>
+                                                    <td>£40</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
                     </div>
 
@@ -110,11 +314,11 @@
                     </h2>
 
                     <div class="accordion-content" id="panel2-content" aria-labelledby="panel2-heading"
-                        aria-hidden="true" role="region">
-                        <p>
+                        aria-hidden="false" role="region">
+                        <div>
                             <h3>Products</h3>
 
-                        </p>
+                        </div>
 
                     </div>
 
@@ -133,9 +337,9 @@
 
                     <div class="accordion-content" id="panel3-content" aria-labelledby="panel3-heading"
                         aria-hidden="false" role="region">
-                        <p>
+                        <div>
                             <h3>Gallery</h3>
-                        </p>
+                        </div>
 
                     </div>
 
