--- a/pages/nails.html
+++ b/pages/nails.html
@@ -86,17 +86,18 @@
                     </h2>
                     <div class="accordion-content" id="panel1-content" aria-labelledby="panel1-heading"
                         aria-hidden="false" role="region">
-                        <div class="wrapper-service">
+                        <div class="service-wrapper">
                             <div class="service-accordion">
                                 <!--  Manicure -->
                                 <div class="service-accordion-panel">
-                                    <h2 id="service-panel1-heading">
-                                        <button class="service-accordion-trigger">
+                                    <h3 id="service-panel1-heading">
+                                        <button class="service-accordion-trigger" aria-controls="service-panel1-content"
+                                            aria-expanded="true">
                                             <span id="service-panel1-title">
                                                 Manicure
                                             </span>
                                         </button>
-                                    </h2>
+                                    </h3>
                                     <div class="service-accordion-content" id="service-panel1-content"
                                         aria-labelledby="service-panel1-heading" aria-hidden="false" role="region">
                                         <table>
@@ -154,12 +155,12 @@
                                 </div>
                                 <!--  Pedicure -->
                                 <div class="service-accordion-panel">
-                                    <h2 id="service-panel2-heading">
+                                    <h3 id="service-panel2-heading">
                                         <button class="service-accordion-trigger" aria-controls="service-panel2-content"
                                             aria-expanded="false">
                                             <span id="service-panel2-title">Pedicure</span>
                                         </button>
-                                    </h2>
+                                    </h3>
 
                                     <div class="service-accordion-content" id="service-panel2-content"
                                         aria-labelledby="service-panel2-heading" aria-hidden="true" role="region">
@@ -172,11 +173,13 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td>Full Pedicure (Shellac Colour, Hard Skin Removal, Treatment)</td>
+                                                    <td>Full Pedicure (Shellac Colour, Hard Skin Removal, Treatment)
+                                                    </td>
                                                     <td>£46</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Full Pedicure (Normal Varnish Colour, Hard Skin Removal, Treatment)</td>
+                                                    <td>Full Pedicure (Normal Varnish Colour, Hard Skin Removal,
+                                                        Treatment)</td>
                                                     <td>£32</td>
                                                 </tr>
                                                 <tr>
@@ -193,13 +196,15 @@
                                 </div>
                                 <!-- Additional Services -->
                                 <div class="service-accordion-panel">
-                                    <h2 id="service-panel3-heading">
-                                        <button class="service-accordion-trigger" aria-controls="service-panel3-content" aria-expanded="false">
+                                    <h3 id="service-panel3-heading">
+                                        <button class="service-accordion-trigger" aria-controls="service-panel3-content"
+                                            aria-expanded="false">
                                             <span id="service-panel3-title">Additional Services</span>
                                         </button>
-                                    </h2>
+                                    </h3>
 
-                                    <div class="service-accordion-content" id="service-panel3-content" aria-labelledby="service-panel3-heading" aria-hidden="true" role="region">
+                                    <div class="service-accordion-content" id="service-panel3-content"
+                                        aria-labelledby="service-panel3-heading" aria-hidden="true" role="region">
                                         <table>
                                             <thead>
                                                 <tr>
@@ -221,24 +226,38 @@
                                     </div>
                                 </div>
 
-                                </div>
                             </div>
                         </div>
-                        <!-- Gallery -->
-                        <div class="accordion-panel">
-                            <h2 id="panel2-heading">
-                                <button class="accordion-trigger" aria-controls="panel2-content" aria-expanded="false">
-                                    <span id="panel2-title">Gallery</span>
-                                </button>
-                            </h2>
+                    </div>
+                </div>
 
-                            <div class="accordion-content" id="panel2-content" aria-labelledby="panel2-heading"
-                                aria-hidden="true" role="region">
-                                <div>
-                                    <h3>Gallery</h3>
-                                </div>
+                <!-- Gallery -->
+                <div class="accordion-panel">
+                    <h2 id="panel2-heading">
+                        <button class="accordion-trigger" aria-controls="panel2-content" aria-expanded="false">
+                            <span id="panel2-title">Gallery</span>
+                        </button>
+                    </h2>
+
+                    <div class="accordion-content" id="panel2-content" aria-labelledby="panel2-heading"
+                        aria-hidden="true" role="region">
+                        <div class="gallery-wrapper">
+
+                            <div>
+                                <img src="../assets/images/nails1.jpg" alt="nails gallery first picture">
+                            </div>
+                            <div>
+                                <img src="../assets/images/nails2.jpg" alt="nails gallery second picture">
+                            </div>
+                            <div>
+                                <img src="../assets/images/nails3.jpg" alt="nails gallery third picture">
+                            </div>
+                            <div>
+                                <img src="../assets/images/nails4.jpg" alt="nails gallery fourth picture">
                             </div>
                         </div>
+                    </div>
+                </div>
         </section>
     </main>
     <footer>
@@ -252,7 +271,8 @@
             <span>SW15 6SG</span>
         </p>
     </footer>
-    <script src="../assets/script/script.js"></script>
+    <!-- <script src="../assets/script/nails.js"></script> -->
+     <script src="../assets/script/script.js"></script>
 </body>
 
 </html>
