added tabs to the nails

--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@ Your local Putney destination for expert hair, nail, and beauty services. -->
             </div>
 
             <div>
-                <p>Look great,</p>
-                <p>Feel amazing.</p>
+                <h1 class="title-wrapper">
+                    <span>Look great,</span>
+                    <span>Feel amazing.</span>
+                </h1>
+                <p></p>
             </div>
 
         </section>
